# marcode

./: main.py  pyproject.toml
src/marcode/agent/: agent.py  prompts.py
src/marcode/cli/: entrypoint.py
tests/agent/: test_agent.py
tests/cli/entrypoint/: test_entrypoint.py
