[project]
name = "marcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openai>=2.43.0",
]

[dependency-groups]
dev = [
    "marcode",
    "pyright>=1.1.410",
    "pytest>=9.1.0",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
marcode = { workspace = true }
